App selects videos from both Photos Library and camera. Beginning stages of integrating Firebase.

--- a/VerticalPrototype/Info.plist
+++ b/VerticalPrototype/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>App allows user to select media for uploading to database.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -26,6 +24,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App allows user to select media for uploading to database.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allows user to record media using camera for upload purposes.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allows recording of audio when recording media for upload purposes.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
